--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,8 +126,21 @@
     <string name="importDB">Import databáze</string>
     <string name="exportDB">Export databáze</string>
     <string name="backText">Zpět</string>
-    <string name="closeWindow">Zavřít</string>
+    <string name="newFP">Nový</string>
+    <string name="cancelFPreg">Zrušit</string>
+    <string name="btnClose">Zavřít</string>
+    <string name="fpTextInfo">Pro zahájení stiskněte tlačítko \'Nový\'</string>
+    <string name="fpImage1">FPImage1</string>
+    <string name="fpImage2">FPImage2</string>
+    <string name="fpImage3">FPImage3</string>
+    <string name="zk_sensor">ZK sensor</string>
+    <string name="editFPInfo">Editace</string>
     <string name="deleteFP">Smazat</string>
-    <string name="editFPInfo">Editovat</string>
+    <string name="editfpinfo">Editace otisku prstu</string>
+    <string name="new_user">Nový uživatel</string>
+    <string name="new_user_id">Nové ID uživatele</string>
+    <string name="new_user_worker_id">Nové ID zaměstnance</string>
+    <string name="new_user_name">Nové jméno uživatele</string>
+
 
 </resources>
